test main update

--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/main.css" />
     <script src="https://kit.fontawesome.com/71f4ab0dbb.js" crossorigin="anonymous"></script>
-    <title>Main Page</title>
+    <title>Main Page - Test2</title>
   </head>
   <body>
     <header>
